--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
-    "sucrase": "^3.20.1"
+    "sucrase": "^3.20.1",
+    "yup": "^0.32.9",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
-    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.12",
-    "sequelize-cli": "^6.2.0",
-    "yup": "^0.32.9"
+    "sequelize-cli": "^6.2.0"
   }
 }
